Fix footer spacing.

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -5,4 +5,6 @@
 footer[role='contentinfo'] {
   background-color: $color-white;
   color: $color-black;
+  padding: 0;
+  margin: 0;
 }
